// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test screenshots for all components matches GameDetails snapshot 1`] = `
<div
  className="spinner-border text-primary"
  role="status"
>
  <span
    className="sr-only"
  >
    Loading...
  </span>
</div>
`;

exports[`test screenshots for all components matches Games snapshot 1`] = `
<div
  className="card"
>
  <div
    className="search"
  >
    <input
      onChange={[Function]}
      placeholder="Search..."
      type="text"
      value=""
    />
  </div>
  <div
    className="spinner-border text-primary"
    role="status"
  >
    <span
      className="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`test screenshots for all components matches Header snapshot 1`] = `
<header>
  <a
    aria-current="page"
    className="active"
    href="/"
    onClick={[Function]}
  >
    <div
      className="back"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 11H6.414l5.293-5.293-1.414-1.414L2.586 12l7.707 7.707 1.414-1.414L6.414 13H21z"
        />
      </svg>
    </div>
  </a>
</header>
`;

exports[`test screenshots for all components matches NotFound snapshot 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <h1>
        Not Found
      </h1>
    </div>
  </div>
</div>
`;
